# MiraEngine

./: .gitignore  CMakeLists.txt  LICENSE
Mira2D/: CMakeLists.txt
Mira2D/include/Backend/: MEWindow.h
Mira2D/include/Core/: MEApplication.h  MEGameObject.h  MEMaster.h  MEModule.h  Mira2D.h
Mira2D/include/Graphics/: MERenderer.h  METexture.h  Mira2D.h
Mira2D/src/Backend/: MEWindow.cpp
Mira2D/src/Core/: MEApplication.cpp  MEGameObject.cpp  MEMaster.cpp
game/: CMakeLists.txt
game/src/: main.cpp
